The session cookie now gets sent, the photo is saved in the database and it's path is properly stored

--- a/app/src/main/res/layout/activity_face.xml
+++ b/app/src/main/res/layout/activity_face.xml
@@ -7,7 +7,7 @@
     tools:context=".FaceActivity">
 
     <Button
-        android:id="@+id/capture_button"
+        android:id="@+id/capture_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Take photo"
